src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACS_Exception__c</fullName>
        <label>ACS_Exception</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACS_Profile_Update_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACS_Profile_Update_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACS_Registration_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACS_Registration_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_External_Id__c</fullName>
        <formula>Account.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_External_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Reset_Password_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Reset Password Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRD_callout_in_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HRD_callout_in_progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heroku_Update_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heroku_Update_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact does no longer work for this company</inlineHelpText>
        <label>Inactive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Primary contact is the person with access to the website. There can only be one Primary Contact for each dealer account</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration_Email_Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acs_password__c</fullName>
        <label>ACS_Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>Cant_create_more_than_1_primary_contact</fullName>
        <active>false</active>
        <description>When a primary contact already exists, users cannot create additional ones</description>
        <errorConditionFormula>Account.00NS0000001BS4w  &gt; 0</errorConditionFormula>
        <errorDisplayField>Primary_Contact__c</errorDisplayField>
        <errorMessage>A Primary Contact already exists for this dealer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_contact_cannot_be_primary</fullName>
        <active>false</active>
        <errorConditionFormula>Primary_Contact__c = true</errorConditionFormula>
        <errorDisplayField>Inactive_Contact__c</errorDisplayField>
        <errorMessage>An Inactive contact cannot be a Primary Contact simultaneously.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_can_only_contain_digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( 
IF( 
ISBLANK(Phone) , false , NOT(REGEX(Phone, &quot;0\\D*?(\\d\\D*?){10}&quot;))), 
IF( 
ISBLANK(MobilePhone) , false , NOT(REGEX(Phone, &quot;0\\D*?(\\d\\D*?){10}&quot;)))),
$Profile.Name != &apos;API User Profile&apos;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please ensure the number starts with a 0 and is 11 digits long</errorMessage>
    </validationRules>
</CustomObject>